Updates for final

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Secrets
-DATABASE_URL = "mongodb+srv://swaraj1920:swaraj1920@cluster0.6yd9l.mongodb.net/arena2"
+DATABASE_URL = "mongodb+srv://swaraj1920:swaraj1920@cluster0.6yd9l.mongodb.net/pagination"
 PORT = "8000"
